Fix the letter spacing font size for phone sizes

--- a/css/main.css
+++ b/css/main.css
@@ -95,6 +95,10 @@ body {
     animation-name: moveInLeft;
     animation-duration: 1s;
     animation-timing-function: ease-out; }
+    @media (max-width: 37.5em) {
+      .heading-primary--main {
+        letter-spacing: 1rem;
+        font-size: 5rem; } }
   .heading-primary--sub {
     display: block;
     font-size: 2rem;
@@ -102,6 +106,9 @@ body {
     letter-spacing: 1.7em;
     /* A more implied way of doing animations vs .heading-primary-main's explicit way. */
     animation: moveInRight 1s ease-out; }
+    @media (max-width: 37.5em) {
+      .heading-primary--sub {
+        letter-spacing: .5rem; } }
 
 .heading-secondary {
   font-size: 3.5rem;
